# ProgLang_ErrorPropagation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-smoke.yml
Spider2/assets/: Snowflake_Guideline.md
configs/: free_model_suite.yaml  model_presets.yaml  study_protocol_zero_budget.yaml  task_pack_zero_budget.yaml
continuity/: Error_Propagation_Project_Continuity_Pack.json  Error_Propagation_Project_Continuity_Pack.md
docs/: DATASET_SETUP.md  LOCAL_VSCODE_GITHUB_WORKFLOW.md  MODEL_SELECTION.md  NEW_DEVICE_WORKFLOW.md  REPO_LAYOUT.md  SCRIPTS_AND_WORKBOOK_FLOW.md  TESTING_WORKFLOW.md  WORKBOOK_INPUT_GUIDE.md
docs/reports/: comparison_report.html  comparison_report.md  functionality_reference.html  functionality_reference.md  workbook_guide.html  workbook_guide.md
prompts/: revise_F0.txt  revise_F1.txt  revise_F2.txt  revise_F3.txt  turn1_sql.txt
scripts/: 01_setup_unix.sh  01_setup_windows.ps1  02_validate_spider2_layout.py  03_run_trajectory_manual.py  04_sync_logs_to_workbook.py  05_generate_analysis_tables.py  06_run_stability_checks.py  07_bootstrap_external_assets_windows.ps1  08_post_run_sync_and_commit_windows.ps1  09_repair_workbook.py  10_seed_workbook_reference_data.py  11_reset_workbook_for_manual_entry.py  12_run_from_workbook.py
tests/: test_metrics.py  test_prompt_context.py  test_sample_runner.py  test_sql_extract.py  test_workbook_driver.py  test_workbook_seed.py  test_workbook_sync.py
workbook/: Experiment_ProgLang_Error_Propagation_dryrun_backup.xlsx  Experiment_ProgLang_Error_Propagation_repo.xlsx
(+154 files in other folders)
