[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "errorprop-sql"
version = "0.1.0"
description = "Manual trajectory runner and analysis toolkit for iterative Text-to-SQL error propagation studies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "pyyaml>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
